--- a/index.html
+++ b/index.html
@@ -1,27 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>7soon - Home</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <nav class="navbar">
-    <div class="logo">7soon</div>
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="products.html">Products</a></li>
-      <li><a href="checkout.html">Checkout</a></li>
-    </ul>
-  </nav>
-  <header class="hero">
-    <h1>Welcome to 7soon</h1>
-    <p>Your ultimate destination for gaming software</p>
-    <a href="products.html" class="btn">Shop Now</a>
-  </header>
-  <footer class="footer">
-    <p>&copy; 2024 7soon. All rights reserved.</p>
-  </footer>
-</body>
-</html>
+/* إعدادات عامة */
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #1a1a1a;
+  color: white;
+}
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #333;
+  padding: 10px 20px;
+}
+.navbar .logo {
+  font-size: 24px;
+  font-weight: bold;
+  color: #ff4c4c;
+}
+.navbar .nav-links {
+  list-style: none;
+  display: flex;
+  gap: 15px;
+  margin: 0;
+  padding: 0;
+}
+.navbar .nav-links li a {
+  text-decoration: none;
+  color: white;
+  font-size: 16px;
+}
+.hero {
+  text-align: center;
+  padding: 50px 20px;
+  background: linear-gradient(to bottom, #ff4c4c, #0044cc);
+}
+.hero h1 {
+  font-size: 36px;
+  margin-bottom: 10px;
+}
+.hero .btn {
+  background-color: white;
+  color: #0044cc;
+  padding: 10px 20px;
+  text-decoration: none;
+  font-size: 18px;
+  border-radius: 5px;
+}
+.footer {
+  text-align: center;
+  padding: 10px 0;
+  background-color: #333;
+}
