--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-<a href="products.html" class="btn">Shop Now</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pay with Visa</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Payment Page</h1>
+    </header>
+
+    <section class="payment-section">
+        <h2>Complete Your Payment</h2>
+        <div id="paypal-button-container"></div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Your Website</p>
+    </footer>
+
+    <!-- PayPal SDK -->
+    <script src="https://www.paypal.com/sdk/js?client-id=iaBhm7f9sM_zTpAgmRqPQu8iKY5-nRn_Ae4c5POc-A-WgTpiC8MpPEFdttmd8yDZnETaxDjZepN&currency=USD"></script>
+
+    <script>
+        // Render the PayPal button
+        paypal.Buttons({
+            createOrder: function(data, actions) {
+                // Set up the transaction
+                return actions.order.create({
+                    purchase_units: [{
+                        amount: {
+                            value: '10.00' // Replace with the price of your product
+                        }
+                    }]
+                });
+            },
+            onApprove: function(data, actions) {
+                // Capture the funds
+                return actions.order.capture().then(function(details) {
+                    alert('Transaction completed by ' + details.payer.name.given_name);
+                });
+            },
+            onError: function(err) {
+                console.error(err);
+                alert('An error occurred during the payment process.');
+            }
+        }).render('#paypal-button-container'); // Display the PayPal button
+    </script>
+</body>
+</html>
