--- a/index.html
+++ b/index.html
@@ -52,28 +52,36 @@
 
     <!-- تضمين PayPal SDK -->
     <script src="https://www.paypal.com/sdk/js?client-id=iaBhm7f9sM_zTpAgmRqPQu8iKY5-nRn_Ae4c5POc-A-WgTpiC8MpPEFdttmd8yDZnETaxDjZepN&currency=USD"></script>
+
+    <!-- كود زر الدفع -->
     <script>
-        // زر الدفع
-        paypal.Buttons({
-            createOrder: function(data, actions) {
-                return actions.order.create({
-                    purchase_units: [{
-                        amount: {
-                            value: '20.00' // السعر
-                        }
-                    }]
-                });
-            },
-            onApprove: function(data, actions) {
-                return actions.order.capture().then(function(details) {
-                    alert('Transaction completed by ' + details.payer.name.given_name);
-                });
-            },
-            onError: function(err) {
-                console.error(err);
-                alert('An error occurred during the payment process.');
+        document.addEventListener("DOMContentLoaded", function() {
+            const shopSection = document.querySelector("#shop");
+            const paypalContainer = document.querySelector("#paypal-button-container");
+
+            if (paypalContainer) {
+                paypal.Buttons({
+                    createOrder: function(data, actions) {
+                        return actions.order.create({
+                            purchase_units: [{
+                                amount: {
+                                    value: '20.00' // السعر
+                                }
+                            }]
+                        });
+                    },
+                    onApprove: function(data, actions) {
+                        return actions.order.capture().then(function(details) {
+                            alert('Transaction completed by ' + details.payer.name.given_name);
+                        });
+                    },
+                    onError: function(err) {
+                        console.error(err);
+                        alert('An error occurred during the payment process.');
+                    }
+                }).render('#paypal-button-container');
             }
-        }).render('#paypal-button-container'); // زر الدفع يظهر فقط في قسم المنتجات
+        });
     </script>
 </body>
 </html>
