--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#shop">Shop</a></li>
+                    <li><a href="#cart">Cart</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -31,9 +32,38 @@
     <!-- قسم المنتجات -->
     <section id="shop" class="section shop-section">
         <h2>Our Products</h2>
-        <div class="product">
-            <h3>Gaming Software - $20</h3>
-            <!-- زر الدفع يظهر هنا فقط -->
+        <div class="product" data-id="1" data-name="Gaming Software" data-price="20.00">
+            <h3>tweak</h3>
+            <p>Price: $20.00</p>
+            <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="product" data-id="2" data-name="Streaming Tool" data-price="15.00">
+            <h3>Streaming Tool</h3>
+            <p>Price: $15.00</p>
+            <button class="add-to-cart">Add to Cart</button>
+        </div>
+    </section>
+
+    <!-- قسم السلة -->
+    <section id="cart" class="section cart-section">
+        <h2>Your Cart</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>Product</th>
+                    <th>Price</th>
+                    <th>Quantity</th>
+                    <th>Total</th>
+                </tr>
+            </thead>
+            <tbody id="cart-items">
+                <tr>
+                    <td colspan="4">Your cart is empty</td>
+                </tr>
+            </tbody>
+        </table>
+        <div id="checkout">
+            <h3>Total: $<span id="cart-total">0.00</span></h3>
             <div id="paypal-button-container"></div>
         </div>
     </section>
@@ -41,8 +71,8 @@
     <!-- قسم التواصل -->
     <section id="contact" class="section contact-section">
         <h2>Contact Us</h2>
-        <p>Email: support@7soon.com</p>
-        <p>Phone: +123 456 7890</p>
+        <p>Email: 7soonalmshaweh@gmail.com</p>
+        <p>Phone: +965 50988144</p>
     </section>
 
     <!-- الفوتر -->
@@ -53,35 +83,7 @@
     <!-- تضمين PayPal SDK -->
     <script src="https://www.paypal.com/sdk/js?client-id=iaBhm7f9sM_zTpAgmRqPQu8iKY5-nRn_Ae4c5POc-A-WgTpiC8MpPEFdttmd8yDZnETaxDjZepN&currency=USD"></script>
 
-    <!-- كود زر الدفع -->
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            const shopSection = document.querySelector("#shop");
-            const paypalContainer = document.querySelector("#paypal-button-container");
-
-            if (paypalContainer) {
-                paypal.Buttons({
-                    createOrder: function(data, actions) {
-                        return actions.order.create({
-                            purchase_units: [{
-                                amount: {
-                                    value: '20.00' // السعر
-                                }
-                            }]
-                        });
-                    },
-                    onApprove: function(data, actions) {
-                        return actions.order.capture().then(function(details) {
-                            alert('Transaction completed by ' + details.payer.name.given_name);
-                        });
-                    },
-                    onError: function(err) {
-                        console.error(err);
-                        alert('An error occurred during the payment process.');
-                    }
-                }).render('#paypal-button-container');
-            }
-        });
-    </script>
+    <!-- كود السلة -->
+    <script src="scripts.js"></script>
 </body>
 </html>
