--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#shop">Shop</a></li>
-                    <li><a href="#cart">Cart</a></li>
+                    <li><a href="#cart" id="cart-button">Cart (<span id="cart-count">0</span>)</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -38,8 +38,8 @@
             <button class="add-to-cart">Add to Cart</button>
         </div>
         <div class="product" data-id="2" data-name="Streaming Tool" data-price="15.00">
-            <h3>Streaming Tool</h3>
-            <p>Price: $15.00</p>
+            <h3>hack fortnite</h3>
+            <p>Price: $25.00</p>
             <button class="add-to-cart">Add to Cart</button>
         </div>
     </section>
