--- a/index.html
+++ b/index.html
@@ -91,3 +91,4 @@
 </body>
 </html>
 <li><a href="javascript:void(0);" id="cert-button">Cert</a></li>
+<button onclick="myFunction()">Click me</button>
