--- a/index.html
+++ b/index.html
@@ -92,3 +92,14 @@
 </html>
 <li><a href="javascript:void(0);" id="cert-button">Cert</a></li>
 <button onclick="myFunction()">Click me</button>
+<!-- نافذة Cert (Modal) -->
+<div id="cert-modal" class="modal">
+    <div class="modal-content">
+        <span class="close-button">&times;</span>
+        <h2>Cert Information</h2>
+        <p>This is the certificate page. Here you can view all certification details.</p>
+    </div>
+</div>
+
+<!-- زر Cert في القائمة -->
+<li><a href="javascript:void(0);" id="cert-button">Cert</a></li>
