--- a/index.html
+++ b/index.html
@@ -103,3 +103,6 @@
 
 <!-- زر Cert في القائمة -->
 <li><a href="javascript:void(0);" id="cert-button">Cert</a></li>
+<script src="scripts.js"></script>
+</body>
+</html>
