--- a/index.html
+++ b/index.html
@@ -82,3 +82,15 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+<header>
+    <nav>
+        <ul>
+            <li><a href="/">الرئيسية</a></li>
+            <li><a href="/about">من نحن</a></li>
+            <li><a href="/services">خدماتنا</a></li>
+            <li><a href="/contact">اتصل بنا</a></li>
+            <!-- زر السلة -->
+            <li><button id="cartButton" onclick="viewCart()">سلة التسوق</button></li>
+        </ul>
+    </nav>
+</header>
