--- a/index.html
+++ b/index.html
@@ -163,3 +163,15 @@
     <script src="scripts.js"></script>
 </body>
 </html>
+<header>
+    <nav>
+        <ul>
+            <li><a href="/" class="nav-link">الرئيسية</a></li>
+            <li><a href="/about" class="nav-link">من نحن</a></li>
+            <li><a href="/services" class="nav-link">خدماتنا</a></li>
+            <li><a href="/contact" class="nav-link">اتصل بنا</a></li>
+            <!-- زر السلة -->
+            <li><button id="cartButton" class="cart-btn" onclick="toggleCart()">سلة التسوق</button></li>
+        </ul>
+    </nav>
+</header>
