--- a/index.html
+++ b/index.html
@@ -175,3 +175,7 @@
         </ul>
     </nav>
 </header>
+<!-- زر بايبال -->
+<div id="paypal-button-container" style="margin-top: 20px; display:none;">
+    <!-- سيتم تحميل زر بايبال هنا -->
+</div>
